--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-language: objective-c
+language: swift
 xcode_project: TripPlanner.xcworkspace
 xcode_scheme: TripPlannerTests
 osx_image: xcode9.2
+xcode_sdk: iphonesimulator10.0
