--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: swift
 xcode_project: TripPlanner.xcworkspace
 xcode_scheme: TripPlanner
 osx_image: xcode9.2
-xcode_sdk: iphonesimulator11.2
+xcode_sdk: iphonesimulator10.2
+script:
+- xcodebuild -workspace TripPlanner.xcworkspace -scheme 'TripPlanner' -destination 'platform=iOS Simulator,name=iPhone 7' build test 
