--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ xcode_scheme: TripPlanner
 osx_image: xcode9.2
 xcode_sdk: iphonesimulator10.2
 script:
-- xcodebuild -workspace TripPlanner.xcworkspace -scheme 'TripPlanner' -destination 'platform=iOS Simulator,name=iPhone 7' build test 
+- xcodebuild -workspace TripPlanner.xcworkspace -scheme 'TripPlanner' -destination 'platform=iOS Simulator,name=iPhone 7' test 
