--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-language: swift
+language: objective-c
 xcode_project: TripPlanner.xcworkspace
 xcode_scheme: TripPlanner
 osx_image: xcode9.2
-xcode_sdk: iphonesimulator10.2
+xcode_sdk: iphonesimulator11.2
 #script:
-#- xcodebuild -workspace TripPlanner.xcworkspace -scheme 'TripPlanner' -destination 'platform=iOS Simulator,name=iPhone 7' test 
+#- xcodebuild -workspace TripPlanner.xcworkspace -scheme TripPlanner -destination 'platform=iOS Simulator,name=iPhone 7' test 
