--- a/TripPlanner.xcodeproj/xcshareddata/xcschemes/TripPlanner.xcscheme
+++ b/TripPlanner.xcodeproj/xcshareddata/xcschemes/TripPlanner.xcscheme
@@ -34,6 +34,20 @@
                ReferencedContainer = "container:TripPlanner.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "NO"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A831842920480BBE007F86C1"
+               BuildableName = "TripPlannerUITests.xctest"
+               BlueprintName = "TripPlannerUITests"
+               ReferencedContainer = "container:TripPlanner.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -51,16 +65,6 @@
                BlueprintIdentifier = "A831841E20480BBE007F86C1"
                BuildableName = "TripPlannerTests.xctest"
                BlueprintName = "TripPlannerTests"
-               ReferencedContainer = "container:TripPlanner.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A831842920480BBE007F86C1"
-               BuildableName = "TripPlannerUITests.xctest"
-               BlueprintName = "TripPlannerUITests"
                ReferencedContainer = "container:TripPlanner.xcodeproj">
             </BuildableReference>
          </TestableReference>
