--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-language: objective-c
+language: swift
 xcode_project: TripPlanner.xcworkspace
 xcode_scheme: TripPlanner
 osx_image: xcode9.2
 xcode_sdk: iphonesimulator11.2
 #script:
 #- xcodebuild -workspace TripPlanner.xcworkspace -scheme TripPlanner -destination 'platform=iOS Simulator,name=iPhone 7' test 
+- xcodebuild -workspace TripPlanner.xcworkspace -scheme TripPlanner -sdk iphonesimulator -destination 'platform=iOS Simulator,OS=11.2,name=iPhone 7' build test | xcpretty -c --test --color
